<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/employee_details"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
 <include layout="@layout/top_titlebar_left" />
 
    <ImageView
        android:id="@+id/employee_image"
        android:layout_width="@dimen/employee_details_view_image_width"
        android:layout_height="@dimen/employee_details_view_image_height"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_below="@+id/relativeLayout1"
        android:src="@drawable/sil_1" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
         android:layout_below="@+id/employee_image">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/employee_details_row_height"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textColor="@color/header"
                android:textSize="@dimen/employee_details_view_text" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="001"
                android:textSize="@dimen/employee_details_view_text" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separator_grey" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/employee_details_row_height"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/header"
                android:textSize="@dimen/employee_details_view_text" />

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jhon"
                android:textSize="@dimen/employee_details_view_text" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separator_grey" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/employee_details_row_height"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/last_name"
                android:textColor="@color/header"
                android:textSize="@dimen/employee_details_view_text" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Jhon"
                android:textSize="@dimen/employee_details_view_text" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separator_grey" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/employee_details_row_height"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/position"
                android:textColor="@color/header"
                android:textSize="@dimen/employee_details_view_text" />

            <TextView
                android:id="@+id/position_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Android"
                android:textSize="@dimen/employee_details_view_text" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separator_grey" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/employee_details_row_height"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/team_lead"
                android:textColor="@color/header"
                android:textSize="@dimen/employee_details_view_text" />

            <TextView
                android:id="@+id/team_lead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Yes"
                android:textSize="@dimen/employee_details_view_text" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separator_grey" />
    </TableLayout>

</RelativeLayout>